# python-mcp-server

./: AGENTS.md  CHANGELOG.md  GEMINI.md  README.md  TODO.md  main.py  mkdocs.yml  pyproject.toml  server.out  test_client.py  test_integration.py  test_upload.txt  test_workspace.py
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: development.md  getting-started.md
src/python_interpreter_mcp/: __main__.py  server.py
src/python_mcp_server/: __init__.py  app.py  server.py
tests/: conftest.py  test_full_integration.py  test_notebook_integration.py  test_server.py
tests/unit/: test_core_helpers.py
workspace/scripts/: demo.py  pytest_demo.py
