[project]
name = "python-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "uvicorn",
    "jupyter_client",
    "matplotlib",
    "pandas",
    "ipykernel",
]

[project.scripts]
python-mcp-server = "python_mcp_server.server:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
